--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,15 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+@layer components {
+    .cv-btn, .work-btn, .header-link{
+        @apply px-6 py-2 border border-transparent rounded-full uppercase text-sm md:text-xl tracking-widest transition-all
+        hover:border-[#008080] hover:text-[#008080] hover:animate-pulse
+    }
+    
+    .contactInput {
+        @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-300 
+        placeholder-gray-200 transition-all focus:border-teal-500/70 focus:text-teal-500/70 hover:border-teal-500/70
+    }
 }
